# ai-token-saver

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: noisy-log.txt
src/ai_token_saver/: __init__.py  cli.py  files.py  metrics.py  optimizer.py  packer.py  privacy.py  render.py  selection.py  tokenizer.py
tests/: test_token_saver.py
