[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-token-saver"
version = "0.4.4"
description = "A local CLI for privacy-safe, evidence-first AI context compression under a token budget."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "huanji2tong" }]
keywords = ["ai", "tokens", "prompt", "context", "llm", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Text Processing",
]
dependencies = []

[project.optional-dependencies]
accurate = ["tiktoken>=0.7"]
image = ["pillow>=10"]
dev = ["pytest>=8"]

[project.scripts]
ai-token-saver = "ai_token_saver.cli:main"
tokensaver = "ai_token_saver.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
